--- a/package.json
+++ b/package.json
@@ -6,21 +6,25 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "populate-db": "node populate_db.ts"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
+    "next": "14.2.4",
+    "pocketbase": "^0.21.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.4"
+    "tailwind": "^4.0.0",
+    "tailwindcss": "^3.4.4"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.4"
+    "eslint-config-next": "14.2.4",
+    "postcss": "^8",
+    "typescript": "^5"
   }
 }
